# ED-System-Search

./: .gitignore  NATIVE_IMPORTER_SPEC.md  README.md  Start ED System Search.bat  config.example.json  local-config.js  package.json  server.js
.claude/: launch.json
docs/: GALAXY_DATA_STORAGE.md
native/ed-data-importer/: Cargo.toml
native/ed-data-importer/src/: main.rs  murder.rs  rich.rs  spatial.rs
public/: app.js  index.html  renderer.js  styles.css
scripts/: import-discoveries.js  import-journals.js  import-name-lookup.js  import-places.js  import-region-vectors.js  import-suggestions.js  import-systems-delta.js  import-systems.js  import-updates.js  inspect-galaxy.js  name-lookup-key.js  run-native-importer.js  suggest-key.js  test-galaxy-integration.js  test-journal-bodies.js  test-local-config.js  test-star-visuals.js  update-time.js
